tests/expectations/parser/program/circuit_deprecated_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'async', 'Fn', 'mapping', 'storage', 'script' -- found 'circuit'
    --> test:4:5
     |
   4 |     circuit Foo {
     |     ^^^^^^^
